[project]
name = "chat-app"
version = "0.1.0"
description = "Real-time chat application with WebSocket support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
]
